resources/cluster-scoped/ingressclasses.networking.k8s.io.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    annotations:
      ingressclass.kubernetes.io/is-default-class: "true"
      meta.helm.sh/release-name: traefik
      meta.helm.sh/release-namespace: kube-system
    creationTimestamp: "2025-03-19T21:39:43Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: traefik-kube-system
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: traefik
      helm.sh/chart: traefik-37.1.1_up37.1.0
    name: traefik
    resourceVersion: "2167573"
    uid: 3586a0ec-8ca7-455b-a55a-ea6979fb33c1
  spec:
    controller: traefik.io/ingress-controller
kind: List
metadata:
  resourceVersion: ""
