resources/cluster-scoped/namespaces.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2025-03-19T21:28:25Z"
    labels:
      kubernetes.io/metadata.name: default
    name: default
    resourceVersion: "41"
    uid: c3ebe81c-8331-41dc-9b0b-599071eefd70
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2025-03-19T21:28:25Z"
    labels:
      kubernetes.io/metadata.name: kube-node-lease
    name: kube-node-lease
    resourceVersion: "58"
    uid: 5ae63a5a-b8f1-4d13-a40b-ee694490be8f
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2025-03-19T21:28:25Z"
    labels:
      kubernetes.io/metadata.name: kube-public
    name: kube-public
    resourceVersion: "26"
    uid: 3c08e3ee-f5a8-4f83-94f2-484594256b58
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2025-03-19T21:28:25Z"
    labels:
      kubernetes.io/metadata.name: kube-system
    name: kube-system
    resourceVersion: "15"
    uid: 25a0d4e7-ea0a-4a90-9ccd-0ddc23d715dd
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"pod-security.kubernetes.io/audit":"privileged","pod-security.kubernetes.io/enforce":"privileged","pod-security.kubernetes.io/warn":"privileged"},"name":"metallb-system"}}
    creationTimestamp: "2025-03-22T15:56:57Z"
    labels:
      kubernetes.io/metadata.name: metallb-system
      pod-security.kubernetes.io/audit: privileged
      pod-security.kubernetes.io/enforce: privileged
      pod-security.kubernetes.io/warn: privileged
    name: metallb-system
    resourceVersion: "5570"
    uid: 2ce9a760-8f15-4f61-8c8e-fd96537f1d78
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    creationTimestamp: "2025-03-19T22:23:17Z"
    labels:
      kubernetes.io/metadata.name: monitoring
      pod-security.kubernetes.io/warn: privileged
      pod-security.kubernetes.io/warn-version: latest
    name: monitoring
    resourceVersion: "2664"
    uid: b021349e-cfce-4a00-ae6a-3fb1c5c3086a
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"tests"}}
    creationTimestamp: "2025-07-23T20:35:20Z"
    labels:
      kubernetes.io/metadata.name: tests
    name: tests
    resourceVersion: "183069"
    uid: 7fb194e8-27ec-42cf-8781-e0093d6928e7
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
kind: List
metadata:
  resourceVersion: ""
